# Chess-Masterclass

./: README.md  build.sh  plan.md  pyproject.toml  render.yaml  requirements.txt
chess_masterclass/: .gitignore  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
chess_masterclass/chess_masterclass/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
chess_masterclass/chessmasterclass/: package-lock.json  package.json
chess_masterclass/frontend_chessmasterclass/: package-lock.json  package.json
chess_masterclass/frontend_chessmasterclass/public/: index.html
chess_masterclass/frontend_chessmasterclass/src/: App.css  App.js
chess_masterclass/main/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
chess_masterclass/main/api/: serializers.py  urls.py  views.py
chess_masterclass/main/migrations/: 0001_initial.py  0002_chesscourse_premiumplan.py  0003_remove_chesscourse_premiumplan.py  0004_chesscourse_premiumplan.py  0005_chesstable.py  0006_alter_chesstable_text.py  0007_chesscourse_liked_by.py  0008_remove_chesscourse_liked_by.py  0009_chesscourse_liked_by.py  (+7 more)
chess_masterclass/member/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
chess_masterclass/payment/: admin.py  models.py  tests.py  utils.py
chess_masterclass/staticfiles/: staticfiles.json
staticfiles/: staticfiles.json
staticfiles/css/: main.9c470089.cade655d5cbf.css.br  main.9c470089.css.map.br
staticfiles/js/: 787.1e526716.chunk.5fba533d3a00.js  787.1e526716.chunk.js  main.71db270f.e2b7833fd9d5.js.br
(+120 files in other folders)
