[tool.poetry]
name = "chess_masterclass"
version = "0.1.0"
description = ""
authors = ["Propsowicz <tomasiktomasz00@gmail.com>"]

[tool.poetry.dependencies]
asgiref = "^3.5.2"
backports.zoneinfo = "^0.2.1"
Django = "^4.1.1"
django-cors-headers = "^3.13.0"
djangorestframework  "^3.14.0"
djangorestframework-simplejwt = "^5.2.0"
gunicorn = "^20.1.0"
localStoragePy = "^0.2.3"
PyJWT = "^2.5.0"
python-dotenv = "^0.21.0"
pytz = "^2022.2.1"
sqlparse = "^0.4.3"
tzdata = "^2022.2"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
